--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "puppeteer": "^22.15.0"
   }
 }
