--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.1.0",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "puppeteer": "^22.15.0"
+    "envalid": "^8.0.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "puppeteer": "^22.15.0",
+    "telegraf": "^4.16.3",
+    "zod": "^3.23.8"
   }
 }
