--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Compile TypeScript
+        run: npm run build
+
       - name: Run scraper
         env:
           BEZREALITKY_EMAIL: ${{ secrets.BEZREALITKY_EMAIL }}
