--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -85,7 +85,14 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: node dist/index.js
 
+      - name: Check for changes
+        id: changes
+        run: |
+          git diff --exit-code data.json || echo "Changes detected" > /tmp/changes.txt
+        continue-on-error: true
+
       - name: Commit changes
+        if: steps.changes.outputs.changes == 'Changes detected'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
