chore: Github atcion build

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,14 +20,6 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Cache Puppeteer Browser
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/puppeteer
-          key: ${{ runner.os }}-puppeteer-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-puppeteer-
-
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -88,11 +80,15 @@ jobs:
       - name: Check for changes
         id: changes
         run: |
-          git diff --exit-code data.json || echo "Changes detected" > /tmp/changes.txt
-        continue-on-error: true
+          git diff --quiet data.json || echo "Changes detected" > /tmp/changes.txt
+          if [ -f /tmp/changes.txt ]; then
+            echo "has_changes=true" >> $GITHUB_ENV
+          else
+            echo "has_changes=false" >> $GITHUB_ENV
+          fi
 
       - name: Commit changes
-        if: steps.changes.outputs.changes == 'Changes detected'
+        if: env.has_changes == 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
