--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
   schedule:
-    - cron: "*/6 * * * *"
+    - cron: "*/6 * * * *" # Runs every 6 minutes
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -90,12 +91,19 @@ jobs:
           git diff --exit-code data.json || echo "Changes detected" > /tmp/changes.txt
         continue-on-error: true
 
-      - name: Commit changes
-        if: steps.changes.outputs.changes == 'Changes detected'
+      - name: Set up Git configuration
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+
+      - name: Debugging Git status
+        run: git status
+
+      - name: Commit changes
+        if: steps.changes.outputs.changes == 'Changes detected'
+        run: |
           git add data.json
+          git status
           git commit -m 'Update data.json'
           git push
         env:
