--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -86,10 +86,15 @@ jobs:
         run: node dist/index.js
 
       - name: Check for changes
-        id: changes
+        id: check_changes
         run: |
-          git diff --exit-code data.json || echo "Changes detected" > /tmp/changes.txt
-        continue-on-error: true
+          if git diff --exit-code data.json; then
+            echo "No changes detected"
+            echo "changes=false" >> $GITHUB_ENV
+          else
+            echo "Changes detected"
+            echo "changes=true" >> $GITHUB_ENV
+          fi
 
       - name: Set up Git configuration
         run: |
@@ -100,10 +105,9 @@ jobs:
         run: git status
 
       - name: Commit changes
-        if: steps.changes.outputs.changes == 'Changes detected'
+        if: env.changes == 'true'
         run: |
           git add data.json
-          git status
           git commit -m 'Update data.json'
           git push
         env:
