--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -79,8 +79,8 @@ jobs:
 
       - name: Run scraper
         env:
-          BEZREALITKY_EMAIL: ${{ secrets.BEZREALITKY_EMAIL }}
-          BEZREALITKY_PASSWORD: ${{ secrets.BEZREALITKY_PASSWORD }}
+          BR_USERNAME: ${{ secrets.BR_USERNAME }}
+          BR_PASSWORD: ${{ secrets.BR_PASSWORD }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: node dist/index.js
